Adds for components, Employee details form, employee list and employee details pages

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,16 +1,16 @@
 .wrapper {
   height: 20vh;
   background-color: lightgray;
-  padding-left: 10vw;
   display: flex;
   flex-direction: column;
+  padding-left: 3em;
 }
 
 .home__wrapper {
   height: 20vh;
   background-color: lightgray;
-  padding-left: 10vw;
   display: flex;
+  padding-left: 3em;
   justify-content: center;
   flex-direction: column;
 }
