--- a/src/components/EmployeeDetailsForm/EmployeeDetailsForm.module.scss
+++ b/src/components/EmployeeDetailsForm/EmployeeDetailsForm.module.scss
@@ -11,9 +11,18 @@
   font-size: 1.5em;
 }
 
-.date {
+.sub_title {
+  font-size: 1.1em;
+  margin-bottom: 0.5em;
+}
+
+.date_container {
   display: flex;
   flex-direction: column;
+}
+
+.date {
+  display: flex;
 }
 
 .btn {
