--- a/src/components/Form/Radio/Radio.module.scss
+++ b/src/components/Form/Radio/Radio.module.scss
@@ -1,12 +1,14 @@
-.wrapper {
+.container {
   display: flex;
   align-items: center;
+  margin: 1em 0;
 }
 
 .radio {
   border: 0;
   height: 2em;
   width: 2em;
-  padding: -10px;
+  padding: -2em;
+  margin-right: 0.5em;
   accent-color: #48494b;
 }
